examples/test/testpolicy16200.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16200
  namespace: namespace45
spec:
  podSelector:
    matchLabels:
      key29: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value12
          key14: value44
          key4: value13
      podSelector:
        matchLabels:
          key31: value40
